# kombu-sakura-simplemq

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
kombu_sakura_simplemq/: transport.py
